try to fix on mobile nav
voila

--- a/public/assets/css/_header.styl
+++ b/public/assets/css/_header.styl
@@ -35,11 +35,7 @@
         padding-right 20px
         border none
         cursor pointer
-        &:hover
-            .dropdown-content
-                display block
-                overflow scroll
-        &:active
+        &:hover, active
             .dropdown-content
                 display block
                 overflow scroll
